corrections spacing

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -102,7 +102,7 @@ h1 {
     border: var(--border);
     margin-top: 0;
     position: absolute;
-    transform: translate(0%, -100px);
+    transform: translate(0%, -130px);
 }
 
 article {
